fixing responsive booth text overflow and ca i18n

--- a/avBooth/booth-directive/booth-directive.less
+++ b/avBooth/booth-directive/booth-directive.less
@@ -70,6 +70,7 @@
 
     &.collapsed {
       max-height: 150px;
+      overflow-y: hidden;
     }
 
     h1 {
